Ticking system small rework

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,28 +4,14 @@ org.gradle.logging.level=debug
 
 #Minecraft related
 minecraft_version=1.17.1
-forge_version=37.0.17
-mod_version=0.8-Dev
+forge_version=37.0.25
+mod_version=0.7r
 mappings_channel=official
 mappings_version=1.17.1
 jb_annotations=21.0.1
 
 #Mod dependencies
-rs_version=1.9.12+157
-cc_version=1.16.5:1.97.0
-ae_version=8.4.0
-curios_version=1.16.5-4.0.5.2
-botania_version=1.16.5-419
-mekanism_version=1.16.5-10.0.21.448
-minecolonies_version=0.14.311-BETA
-structurize_version=0.13.202-ALPHA
-integrated_dynamics_version=236307:3376007
-common_capabilities_version=247007:3292062
-cyclops_core_version=232758:3336467
-immersive_engineering_version=231951:3377691
-storagedrawers_version=223852:3180569
+cc_version=1.17.1:1.98.1
+curios_version=1.17.1-5.0.0.1
 
 #Mod dependencies for testing stuff(Only used in the dev environment)
-patchouli_version=1.16.4-51
-top_version=1.16-3.0.6-8
-jei_version=1.16.5:7.7.0.98
