--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=debug
 #Minecraft related
 minecraft_version=1.16.5
 forge_version=36.2.2
-mod_version=0.7a
+mod_version=0.7.0.1r
 mappings_channel=official
 mappings_version=1.16.5
 jb_annotations=21.0.1
