Fix bug report template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -27,7 +27,7 @@ body:
         description: Do you play on a server?
         multiple: false
         options:
-            - Yes
+            - "Yes"
             - No
             - LAN
     - type: dropdown
