--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
-org.gradle.logging.level=debug
+org.gradle.logging.level=info
 
 #Minecraft related
 minecraft_version=1.16.5
