--- a/gradle.properties
+++ b/gradle.properties
@@ -29,3 +29,4 @@ storagedrawers_version=223852:3180569
 patchouli_version=1.16.4-51
 top_version=1.16-3.0.6-8
 jei_version=1.16.5:7.7.0.98
+cu_version=371813:3400648
