--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ org.gradle.logging.level=info
 minecraft_version=1.16.5
 forge_version=36.2.2
 mod_version=0.7.1r
+release_type=release
 mappings_channel=official
 mappings_version=1.16.5
 jb_annotations=21.0.1
