Fix syntax problem in build script

--- a/build.gradle
+++ b/build.gradle
@@ -217,7 +217,7 @@ if (!isSnapshotVersion) {
 
         project {
             id = "431725"
-            releaseType = ${release_type}
+            releaseType = "${release_type}"
             mainArtifact(jar) {
                 displayName = "Progressive Peripherals ${version}"
                 relations {
