Add compitability fix cc 1.98.2

--- a/build.gradle
+++ b/build.gradle
@@ -184,6 +184,7 @@ curseforge {
                 optionalDependency 'patchouli'
             }
         }
+        addGameVersion "${minecraft_version}"
         try {
             changelog = "${project.changelog.get(project.version).withHeader(false).toText()}"
             changelogType = "markdown"
