--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -29,7 +29,7 @@ side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "computercraft"
 mandatory = true
-versionRange = "1.98.1"
+versionRange = "[1.98.2,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
