--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,13 @@ mappings_channel=official
 mappings_version=1.16.5
 jb_annotations=21.0.1
 
+#Test dependencies
+junit_version=5.7.0
+hamcrest_version=2.2
+kotlin_version=1.3.72
+kotlinx_coroutines_version=1.3.8
+ttoolkit_version=0.1.1
+
 #Mod dependencies
 rs_version=1.9.12+157
 cc_version=1.16.5:1.97.0
