--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,8 @@ common_capabilities_version=247007:3292062
 cyclops_core_version=232758:3336467
 immersive_engineering_version=231951:3377691
 storagedrawers_version=223852:3180569
+create_version=mc1.16.5_v0.3.2d+421
+flywheel_version=1.16-0.2.3.47
 
 #Mod dependencies for testing stuff(Only used in the dev environment)
 patchouli_version=1.16.4-51
