Reduce addon amount

--- a/build.gradle
+++ b/build.gradle
@@ -214,8 +214,8 @@ dependencies {
     implementation fg.deobf("appeng:appliedenergistics2:${ae_version}");
 
     // Minecolonies
-    implementation fg.deobf("com.minecolonies:minecolonies:${minecolonies_version}:universal")
-    implementation fg.deobf("com.ldtteam:structurize:${structurize_version}:universal")
+    compileOnly fg.deobf("com.minecolonies:minecolonies:${minecolonies_version}:universal")
+    compileOnly fg.deobf("com.ldtteam:structurize:${structurize_version}:universal")
     // Botania with deps
     implementation fg.deobf("vazkii.botania:Botania:${botania_version}")
 
@@ -232,12 +232,12 @@ dependencies {
     implementation fg.deobf("curse.maven:immersiveengineering-${immersive_engineering_version}")
 
     // Storage Drawers
-    implementation fg.deobf("curse.maven:storagedrawers-${storagedrawers_version}")
+    compileOnly fg.deobf("curse.maven:storagedrawers-${storagedrawers_version}")
 
     // Create
 
-    implementation fg.deobf("com.simibubi.create:Create:${create_version}")
-    implementation fg.deobf("com.jozufozu.flywheel:Flywheel:${flywheel_version}")
+    compileOnly fg.deobf("com.simibubi.create:Create:${create_version}")
+    compileOnly fg.deobf("com.jozufozu.flywheel:Flywheel:${flywheel_version}")
 
     testModImplementation sourceSets.main.output
 
