--- a/gradle.properties
+++ b/gradle.properties
@@ -25,8 +25,8 @@ ae_version=8.4.0
 curios_version=1.16.5-4.0.5.2
 botania_version=1.16.5-419
 mekanism_version=1.16.5-10.0.21.448
-minecolonies_version=0.14.311-BETA
-structurize_version=0.13.202-ALPHA
+minecolonies_version=1.0.0-RELEASE
+structurize_version=0.13.219-ALPHA
 integrated_dynamics_version=236307:3376007
 common_capabilities_version=247007:3292062
 cyclops_core_version=232758:3336467
