--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -39,6 +39,7 @@ body:
         multiple: false
         options:
             - Own compiled build.
+            - 0.7.2r (Latest)
             - 0.7.1r (Latest)
             - 0.7.0.1r
             - 0.7r
