- Added `getItemInHand`, `getFreeSlot`, `isSpaceAvailable` and `getEmptySpace` to the inventory manager. - Added support for armor items. You can use the slots 100-103 to access armor items.

--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,7 @@ minecraft {
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
-            properties 'forge.logging.console.level': 'info'
+            properties 'forge.logging.console.level': 'debug'
 
             mods {
                 advancedperipherals {
