--- a/gradle.properties
+++ b/gradle.properties
@@ -31,6 +31,9 @@ immersive_engineering_version=231951:3377691
 storagedrawers_version=223852:3180569
 create_version=mc1.16.5_v0.3.2d+421
 flywheel_version=1.16-0.2.3.47
+draconic_evolution_version=223565:3496727
+brandon_core_version=231382:3496725
+code_chicken_version=242818:3456069
 #Mod dependencies for testing stuff(Only used in the dev environment)
 patchouli_version=1.16.4-51
 top_version=1.16-3.0.6-8
