--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.logging.level=info
 #Minecraft related
 minecraft_version=1.16.5
 forge_version=36.2.8
-mod_version=0.7.4.1b
-release_type=beta
+mod_version=0.7.5r
+release_type=release
 mappings_channel=official
 mappings_version=1.16.5
 jb_annotations=21.0.1
