--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=info
 #Minecraft related
 minecraft_version=1.17.1
 forge_version=37.0.109
-mod_version=0.7.4.1b
+mod_version=0.7.5r
 release_type=release
 mappings_channel=official
 mappings_version=1.17.1
