--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=info
 #Minecraft related
 minecraft_version=1.17.1
 forge_version=37.0.109
-mod_version=0.7.5r
+mod_version=0.7.5.1r
 release_type=release
 mappings_channel=official
 mappings_version=1.17.1
@@ -22,6 +22,7 @@ ttoolkit_version=0.1.1
 cc_version=1.17.1:1.98.2
 curios_version=1.17.1-5.0.0.1
 minecolonies_version=1.17.1-1.0.148-ALPHA
+appliedenergistics_version=9.0.0-beta.2
 
 #Mod dependencies which are needed for other mods
 #For minecolonies
@@ -32,8 +33,6 @@ multipiston_version=1.17.1-1.2.1-ALPHA
 
 #To better testmods
 jei_version=1.17.1:8.2.0.36
-
-
 
 
 #Mod dependencies for testing stuff(Only used in the dev environment)
