--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -39,8 +39,10 @@ body:
       multiple: false
       options:
         - Own compiled build.
-        - 0.7.4.1b (Latest)
-        - 0.7.4r (Stable latest
+        - 0.7.5.1r (Latest 1.17.1)
+        - 0.7.5r (Latest)
+        - 0.7.4.1b
+        - 0.7.4r 
         - 0.7.3r
         - 0.7.2r 
         - 0.7.1r
