--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -17,7 +17,7 @@ Adds things like the Me Bridge, various types of turtles, the Chat Box and more.
 [[dependencies.advancedperipherals]]
 modId = "forge"
 mandatory = true
-versionRange = "[36.0.46,)"
+versionRange = "[36.2.0,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
@@ -29,7 +29,7 @@ side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "computercraft"
 mandatory = true
-versionRange = "1.96.0"
+versionRange = "[1.99.0,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
@@ -53,7 +53,7 @@ side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "minecolonies"
 mandatory = false
-versionRange = "[0.14.238-BETA,)"
+versionRange = "[1.0.0-RELEASE,)"
 ordnering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
