--- a/gradle.properties
+++ b/gradle.properties
@@ -3,36 +3,36 @@ org.gradle.daemon=false
 org.gradle.logging.level=info
 
 #Minecraft related
-minecraft_version=1.17.1
-forge_version=37.1.0
+minecraft_version=1.18
+forge_version=38.0.13
 mod_version=0.7.6r
 release_type=release
 mappings_channel=official
-mappings_version=1.17.1
+mappings_version=1.18
 jb_annotations=21.0.1
 
 #Test dependencies
-junit_version=5.7.0
+junit_version=5.7.2
 hamcrest_version=2.2
-kotlin_version=1.5.21
-kotlinx_coroutines_version=1.3.8
-ttoolkit_version=0.1.1
+kotlin_version=1.6.0
+kotlinx_coroutines_version=1.6.0
+ttoolkit_version=0.1.3
 
 #Mod dependencies
-cc_version=1.17.1:1.99.0
-curios_version=1.17.1-5.0.0.1
-minecolonies_version=1.17.1-1.0.148-ALPHA
-appliedenergistics_version=9.0.0-beta.2
+cc_version=1.18:1.99.0
+curios_version=1.18-5.0.2.3
+#minecolonies_version=1.17.1-1.0.148-ALPHA
+#appliedenergistics_version=9.0.0-beta.2
 
 #Mod dependencies which are needed for other mods
 #For minecolonies
-structurize_version=1.17.1-0.13.253-ALPHA
-domumornamentum_version=1.17.1-1.0.19-ALPHA
-blockui_version=1.17.1-0.0.29-ALPHA
-multipiston_version=1.17.1-1.2.1-ALPHA
+#structurize_version=1.17.1-0.13.253-ALPHA
+#domumornamentum_version=1.17.1-1.0.19-ALPHA
+#blockui_version=1.17.1-0.0.29-ALPHA
+#multipiston_version=1.17.1-1.2.1-ALPHA
 
 #To better testmods
-jei_version=1.17.1:8.2.0.36
+#jei_version=1.17.1:8.2.0.36
 
 
 #Mod dependencies for testing stuff(Only used in the dev environment)
