--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ ttoolkit_version=0.1.3
 cc_version=1.18:1.99.0
 curios_version=1.18-5.0.2.3
 #minecolonies_version=1.17.1-1.0.148-ALPHA
-#appliedenergistics_version=9.0.0-beta.2
+appliedenergistics_version=10.0.0-alpha.2
 
 #Mod dependencies which are needed for other mods
 #For minecolonies
@@ -31,8 +31,8 @@ curios_version=1.18-5.0.2.3
 #blockui_version=1.17.1-0.0.29-ALPHA
 #multipiston_version=1.17.1-1.2.1-ALPHA
 
-#To better testmods
-#jei_version=1.17.1:8.2.0.36
+#To better test
+jei_version=1.18:9.0.0.40
 
 
 #Mod dependencies for testing stuff(Only used in the dev environment)
