--- a/build.gradle
+++ b/build.gradle
@@ -235,14 +235,17 @@ dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     implementation fg.deobf("org.squiddev:cc-tweaked-${cc_version}")
     // Compile-time API required
+    compileOnly fg.deobf("appeng:appliedenergistics2:${appliedenergistics_version}")
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
     // Minimal requirements end
 
     // Extended requirements
+    // Applied Energistics 2
+    runtimeOnly fg.deobf("appeng:appliedenergistics2:${appliedenergistics_version}")
     // Curios
     runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
     // JEI
-    //runtimeOnly fg.deobf("mezz.jei:jei-${jei_version}")
+    runtimeOnly fg.deobf("mezz.jei:jei-${jei_version}")
 
     // Minecolonies
     /*implementation (fg.deobf("com.ldtteam:minecolonies:${minecolonies_version}") {
