--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -38,3 +38,9 @@ mandatory = false
 versionRange = "[1.18-5.0.2.3,)"
 ordering = "NONE"
 side = "BOTH"
+[[dependencies.advancedperipherals]]
+modId = "ae2"
+mandatory = false
+versionRange = "[10.0.0-alpha.2,)"
+ordering = "NONE"
+side = "BOTH"
