--- a/build.gradle
+++ b/build.gradle
@@ -271,6 +271,10 @@ changelog {
     version = "${project.version}"
     path = "${project.projectDir}/CHANGELOG.md"
     header = "[${minecraft_version}-${-> version.get()}] - ${new SimpleDateFormat("yyyy-MM-dd").format(new Date())}"
+    //Valid patterns would be
+    //1.16.5-1.1.1.1b
+    //1.18-1.0r
+    //1.19-1.0.0a
     headerParserRegex = ~/\d+\.\d+\d+\.?\d?-\d+\.\d\w?\.?\d?\w?\.?\d?\w/
     itemPrefix = "-"
     keepUnreleasedSection = true
