--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -27,7 +27,7 @@ body:
       description: Do you play on a server?
       multiple: false
       options:
-        - "Yes"
+        - Yes
         - No
         - LAN
     validations:
@@ -39,8 +39,13 @@ body:
       multiple: false
       options:
         - Own compiled build.
-        - 0.7.4.1b (Latest)
-        - 0.7.4r (Stable latest
+        - 0.7.7.1r (Latest)
+        - 0.7.7r
+        - 0.7.6r
+        - 0.7.5.1r
+        - 0.7.5r
+        - 0.7.4.1b
+        - 0.7.4r 
         - 0.7.3r
         - 0.7.2r 
         - 0.7.1r
@@ -57,7 +62,7 @@ body:
     attributes:
       label: Minecraft, Forge and maybe other related mods versions
       description: What version of Forge and Minecraft do you use?
-      placeholder: Forge 36.1.32 Minecraft 1.16.5
+      placeholder: Forge 36.2.0 Minecraft 1.16.5
     validations:
       required: true
   - type: input
