--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.logging.level=info
 #Minecraft related
 minecraft_version=1.16.5
 forge_version=36.2.8
-mod_version=0.7.8r
+mod_version=0.7.6a
 release_type=release
 mappings_channel=official
 mappings_version=1.16.5
@@ -22,8 +22,8 @@ ae_version=8.4.0
 curios_version=1.16.5-4.0.5.2
 botania_version=1.16.5-419
 mekanism_version=1.16.5-10.0.24.453
-minecolonies_version=1.0.0-RELEASE
-structurize_version=0.13.219-ALPHA
+minecolonies_version=245506:3550851
+structurize_version=0.13.252-ALPHA
 integrated_dynamics_version=236307:3376007
 common_capabilities_version=247007:3292062
 cyclops_core_version=232758:3336467
