--- a/gradle.properties
+++ b/gradle.properties
@@ -14,22 +14,22 @@ jb_annotations=21.0.1
 #Test dependencies
 junit_version=5.7.2
 hamcrest_version=2.2
-kotlin_version=1.6.0
-kotlinx_coroutines_version=1.5.2
+kotlin_version=1.6.10
+kotlinx_coroutines_version=1.6.0-RC3
 ttoolkit_version=0.1.3
 
 #Mod dependencies
 cc_version=1.18.1:1.99.1
 curios_version=1.18-5.0.2.4
-#minecolonies_version=1.17.1-1.0.148-ALPHA
+minecolonies_version=1.18.1-1.0.279-BETA
 appliedenergistics_version=10.0.0-alpha.6
 
 #Mod dependencies which are needed for other mods
 #For minecolonies
-#structurize_version=1.17.1-0.13.253-ALPHA
-#domumornamentum_version=1.17.1-1.0.19-ALPHA
-#blockui_version=1.17.1-0.0.29-ALPHA
-#multipiston_version=1.17.1-1.2.1-ALPHA
+structurize_version=1.18.1-1.0.319-BETA
+domumornamentum_version=1.18-1.0.25-ALPHA
+blockui_version=1.18-0.0.34-ALPHA
+multipiston_version=1.18-1.2.2-ALPHA
 
 #To better test
 jei_version=1.18.1:9.1.0.46
