--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,7 @@ cc_version=1.18.1:1.99.1
 curios_version=1.18-5.0.2.4
 minecolonies_version=1.18.1-1.0.279-BETA
 appliedenergistics_version=10.0.0-alpha.6
+patchouli_version=1.18.1-61
 
 #Mod dependencies which are needed for other mods
 #For minecolonies
