--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,3 @@
 public net.minecraft.world.level.block.entity.BeaconBlockEntity f_58652_
 public net.minecraft.world.level.block.entity.BeaconBlockEntity f_58653_
+public net.minecraft.client.renderer.texture.TextureManager m_118519_(Lnet/minecraft/resources/ResourceLocation;)V # _bind
