Fixed incompatibility with ae2 10.0.0-beta.1 Bump 0.7.8.1r

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.logging.level=info
 #Minecraft related
 minecraft_version=1.18.1
 forge_version=39.0.5
-mod_version=0.7.8r
+mod_version=0.7.8.1r
 release_type=release
 mappings_channel=official
 mappings_version=1.18.1
@@ -22,7 +22,7 @@ ttoolkit_version=0.1.3
 cc_version=1.18.1:1.99.1
 curios_version=1.18-5.0.2.4
 minecolonies_version=1.18.1-1.0.279-BETA
-appliedenergistics_version=10.0.0-alpha.6
+appliedenergistics_version=10.0.0-beta.1
 patchouli_version=1.18.1-61
 
 #Mod dependencies which are needed for other mods
