--- a/build.gradle
+++ b/build.gradle
@@ -276,7 +276,7 @@ changelog {
     //1.16.5-1.1.1.1b
     //1.18-1.0r
     //1.19-1.0.0a
-    headerParserRegex = ~/\d+\.\d+\d+\.?\d?-\d+\.\d\w?\.?\d?\w?\.?\d?\w/
+    headerParserRegex = ~/\d+(\.\d+){1,2}-\d+(\.\d+){1,3}\w/
     itemPrefix = "-"
     keepUnreleasedSection = true
     unreleasedTerm = "[Unreleased]"
